--- a/VetAppointment/VetAppointment.UI/VetAppointment.UI.csproj
+++ b/VetAppointment/VetAppointment.UI/VetAppointment.UI.csproj
@@ -29,6 +29,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\veterinarian-png-transparent-png.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazored.FluentValidation" Version="2.0.3" />
     <PackageReference Include="Blazored.SessionStorage" Version="2.3.0" />
     <PackageReference Include="FluentValidation" Version="11.4.0" />
